# py-classifier-docker

./: Dockerfile  README.md  pyproject.toml
app/: data.py  main.py
notebooks/: clsf.ipynb
